--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "job-portal-auth-service",
+  "name": "booking-hotels",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.ts",
@@ -32,15 +32,21 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/ejs": "^3.1.3",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/nodemailer": "^6.4.11",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
+    "nodemailer": "^6.9.6",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.22.2"
